--- a/src/components/Home/home.module.css
+++ b/src/components/Home/home.module.css
@@ -1,7 +1,6 @@
 @import '../../vars.css';
 .grid-container {
     height: 100%; 
-    margin-top: -5%; 
     background-image: 
         linear-gradient(0deg, var(--blue) 1px, transparent 1px),
         linear-gradient(90deg, var(--blue) 1px, transparent 1px);
